--- a/meeting_agendas/1_intro.html
+++ b/meeting_agendas/1_intro.html
@@ -318,15 +318,17 @@ $(document).ready(function () {
 <h2>I. Start-of-class work (5 min)</h2>
 <div id="think-pair-share" class="section level3">
 <h3>Think-pair-share</h3>
-<p>Think: Please explore/think about Figure 1. E.g., What US counties/regions experience the highest rates of kidney cancers in the late 1980s? Pair: Discuss with your neighbor(s) Share: When prompted, share your observations/comments/questions with the class (see below).</p>
+<p>Think: Please explore/think about Figure 1. E.g., What US counties/regions experience the highest rates of kidney cancers in the late 1980s?<br />
+Pair: Discuss with your neighbor(s)<br />
+Share: When prompted, share your observations/comments/questions with the class (see below).</p>
 </div>
 </div>
 <div id="ii.-where-are-all-the-cancers-10-min" class="section level2">
 <h2>II. Where are all the cancers? (10 min)</h2>
 <p>Let’s discuss the maps of showing estimating US Kidney cancer rates.</p>
 </div>
-<div id="iii.-frequentist-vs.bayesaian-10-min" class="section level2">
-<h2>III. Frequentist vs. Bayesaian (10 min)</h2>
+<div id="iii.-frequentist-vs.bayesian-10-min" class="section level2">
+<h2>III. Frequentist vs. Bayesian (10 min)</h2>
 <p>(modified from Bolstad &amp; Curran Ch.1, p.6)</p>
 <p>Frequentist (classical) approach to statistics</p>
 <ul>
