revise meeting agenda 4 after delivery

--- a/meeting_agendas/4_discrete_rvs_common_distr.html
+++ b/meeting_agendas/4_discrete_rvs_common_distr.html
@@ -314,7 +314,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>&lt;bring to class: packets of three sets of cards, dice&gt;</p>
+<p><bring to class: dice></p>
 <div id="i.-start-of-class-work-die-rolling-10-min" class="section level2">
 <h2>I. Start-of-class work: Die rolling (10 min)</h2>
 <p>Let’s dig into an activity based on “Thought Experiment 1” (Section 5.1, p.84). Please roll your 10-sided 10 times and tabulate your results. Join with a partner or two and sketch a relative frequency histogram (example on p.85) of your combined results.</p>
