add exam tables and meeting 19 after class

--- a/meeting_agendas/19_bayes_inference_diff_mean.html
+++ b/meeting_agendas/19_bayes_inference_diff_mean.html
@@ -318,7 +318,7 @@ $(document).ready(function () {
 <div id="start-of-class-work-many-times-a-day-do-you-check-email-5---10-min" class="section level2">
 <h2>Start-of-class work: Many times a day do you check email? (5 - 10 min)</h2>
 <ol style="list-style-type: decimal">
-<li>Think carefully about how many times a day do you check email, <span class="math inline">\(\mu\)</span>, in a 24-hour period (including any naps) over Spring Break, on average.</li>
+<li>Think carefully about how many times a day do you check email, <span class="math inline">\(\mu\)</span>, in a 24-hour period.</li>
 <li>Record your guess.</li>
 <li>Construct your two priors for this average, one for the UNR graduate and one for the UNR undergraduate students.</li>
 </ol>
