add final exam admin to meeting 26

--- a/meeting_agendas/26_midterm_four.html
+++ b/meeting_agendas/26_midterm_four.html
@@ -324,12 +324,47 @@ $(document).ready(function () {
 <p>You may begin working as soon as you get your exam. Please keep all cell phones/laptops/other communication devices away until all exams are turned in. If not, you have violated the student conduct code.</p>
 <p>If you finish early, then please submit your work and return your desk. You may work on other things, but make sure you do not disrupt the test or use a communication device.</p>
 </div>
-<div id="ii.-solution-discussion-20-min" class="section level2">
-<h2>II. Solution discussion (20 min)</h2>
+<div id="ii.-solution-discussion-15-min" class="section level2">
+<h2>II. Solution discussion (15 min)</h2>
 <p>Let’s discuss the solutions as drafted and make sure we all agree on the correct answers, identify any poor questions, etc.</p>
 </div>
-<div id="closing-5-min" class="section level2">
-<h2>Closing (5 min)</h2>
+<div id="iii.-projects-final-exam-and-poster-session-15-min" class="section level2">
+<h2>III. Projects, final exam, and poster session (15 min)</h2>
+<div id="project-poster-expectations" class="section level3">
+<h3>Project poster expectations</h3>
+<ul>
+<li>project organization pdf <a href="https://github.com/grizant/Intro_Bayes_Course/blob/develop/course_materials/Intro-to-Bayesian-Statistics_project_organization.pdf">project tasks</a></li>
+<li>poster guidelines <a href="http://www.grantschissler.com/teaching/SP19/STAT429/poster_guidelines.pdf">poster guidelines</a></li>
+<li>poster rubric <a href="http://www.grantschissler.com/teaching/SP19/STAT429/poster_rubric.pdf">poster rubric</a></li>
+<li>also provide all code that produced the results (within reason). Email or point me to your git repo.</li>
+<li>poster printing procedures. I plan to print posters on Friday 5/10 (unless they need more time for some reason… I’ll check and let you know).</li>
+</ul>
+</div>
+<div id="final-exam" class="section level3">
+<h3>Final exam</h3>
+<ul>
+<li>It will be released by Monday 5/6 (if not before).</li>
+<li>You will submit an electronic copy only of your Final Exam. If you must hand write anything, make sure that you scan the document well and convert to a pdf.</li>
+<li>You must work alone. Violations of this will be taken seriously.</li>
+<li>It is a test. You may ask for clarifications, but I won’t give hints (unless I decide to give to the whole class) or teach you how to do something.</li>
+<li>No late submissions. You have to submit your solutions on Canvas by 11:59pm 5/13/19. Much better to submit incomplete than to be late.</li>
+</ul>
+</div>
+<div id="final-exam-period-on-513-950---1150am-poster-session" class="section level3">
+<h3>Final exam period on 5/13 9:50 - 11:50am: Poster session</h3>
+<ul>
+<li>All students are expected to attend.</li>
+<li>All students will score the posters based on the rubric.</li>
+<li>Best poster(s) will receive class awards and be displayed in the math dept lobby on the 2nd floor.</li>
+<li>If you evaluate all posters, I’ll award an extra 20 points to your total points.</li>
+</ul>
+</div>
+<div id="questions" class="section level3">
+<h3>Questions?</h3>
+</div>
+</div>
+<div id="closing-exam-wrapper-5-min" class="section level2">
+<h2>Closing: Exam Wrapper (5 min)</h2>
 <p>Reflect on your exam performance.</p>
 <ol style="list-style-type: decimal">
 <li>What did you do well?</li>
