revise SP20 mtg 2

--- a/meeting_agendas/2_prob_review_BayesRule.html
+++ b/meeting_agendas/2_prob_review_BayesRule.html
@@ -378,7 +378,7 @@ summary {
 </div>
 <div id="whats-the-color-on-the-other-side-of-the-card" class="section level2">
 <h2>What’s the color on the other side of the card?</h2>
-<p>&lt;Gelman/Nolan Section 8.5.1, p.125&gt;</p>
+<p>Class demonstration.</p>
 </div>
 <div id="administration-items" class="section level2">
 <h2>1. Administration items</h2>
@@ -436,6 +436,7 @@ summary {
 <li><code>gggg</code></li>
 </ol>
 <p><Draw probablity tree on the board></p>
+<p>Now let’s discuss a realistic and (perhaps) surprising twist to the calculation:</p>
 <pre class="r"><code>## our code here
 prob_female &lt;- 0.487
 prob_male &lt;- 1 - prob_female
@@ -447,8 +448,6 @@ prob_male^4</code></pre>
 <pre class="r"><code>## bgbg
 (prob_female)^2 * (prob_male)^2</code></pre>
 <pre><code>## [1] 0.06241553</code></pre>
-<p>Now let’s discuss a realistic and (perhaps) surprising twist to the calculation:</p>
-<p><Insert here></p>
 </div>
 </div>
 <div id="joint-probability-for-independent-events" class="section level3">
