slight revision SP19 lecture 19

--- a/meeting_agendas/19_mvn_multipleReg_6apr20.html
+++ b/meeting_agendas/19_mvn_multipleReg_6apr20.html
@@ -645,13 +645,13 @@ c(bayes_fit$pred.y - qnorm(1 - alpha / 2)* bayes_fit$pred.se, bayes_fit$pred.y +
 ## Note: No prior given (Using flat prior).</code></pre>
 <div id="discuss-hw-10-ch.-15" class="section level3">
 <h3>Discuss HW 10 Ch. 15</h3>
+<p>Let me give some hints to begin.</p>
 </div>
 </div>
 <div id="closing-5-min" class="section level2">
 <h2>Closing (5 min)</h2>
 <ul>
-<li></li>
-<li></li>
+<li>What are some issues in HW that you could use guidance on?</li>
 </ul>
 </div>
 
