--- a/meeting_agendas/27_poster_talks.html
+++ b/meeting_agendas/27_poster_talks.html
@@ -387,41 +387,43 @@ summary {
 <ul>
 <li>I’ll start this virtual poster session with some introductory comments and guidance to everyone.<br />
 </li>
-<li>Then we’ll begin the project discussion and evaluations in group-specific <em>breakout rooms</em>.<br />
+<li>Then we’ll begin the project discussion and evaluations in <em>breakout rooms</em>.<br />
 </li>
-<li>Please use the rubrics to provide feedback to the groups. Be kind and constructive.</li>
+<li>Please critically discuss the project with the poster presenters.</li>
+<li>Make sure you spend time at each poster.</li>
+<li>Please be polite and actually engage/learn.</li>
 </ul>
 </div>
-<div id="project-leaders" class="section level2">
-<h2>Project leaders</h2>
-<div id="austin-boone" class="section level3">
-<h3>Austin Boone</h3>
-<p>Predicting NBA Player Scores Using Bayesian Statistics</p>
+<div id="project-titles-and-teams" class="section level2">
+<h2>Project titles and teams</h2>
+<div id="predicting-nba-player-scores-using-bayesian-statistics" class="section level3">
+<h3>Predicting NBA Player Scores Using Bayesian Statistics</h3>
+<p><em>Austin Boone</em></p>
 </div>
-<div id="bo-liu" class="section level3">
-<h3>Bo Liu</h3>
-<p>Robust Bayesian regression for Benchmark-Dose modeling</p>
+<div id="robust-bayesian-prior-methodology-for-risk-assessment" class="section level3">
+<h3>Robust Bayesian Prior Methodology for Risk Assessment</h3>
+<p><em>Bo Liu and Jessica Logan</em></p>
 </div>
-<div id="benjamin-agyare-and-conner-dayton" class="section level3">
-<h3>Benjamin Agyare and Conner Dayton</h3>
-<p>Using Bayesian statistics with limited data points to answer Is the US Electoral College fair?</p>
+<div id="bayesian-multilevel-modeling-to-detect-partisan-lean" class="section level3">
+<h3>Bayesian Multilevel Modeling to Detect Partisan Lean</h3>
+<p><em>Benjamin Agyare, Jaucelyn Canfield, and Conner Dayton</em></p>
 </div>
-<div id="jacob-ellis" class="section level3">
-<h3>Jacob Ellis</h3>
-<p>Using socioeconomic variables to predict Reno crime patterns via Bayesian modeling</p>
+<div id="how-economic-prosperity-impacts-crime-rate-in-las-vegas" class="section level3">
+<h3>How Economic Prosperity Impacts Crime Rate in Las Vegas</h3>
+<p><em>Jacob Ellis</em></p>
 </div>
-<div id="samantha-faulstich" class="section level3">
-<h3>Samantha Faulstich</h3>
-<p>Imputing undectected mRNA expression in single-cell RNA-sequencing</p>
+<div id="evaluating-fire-emissions-inventories-for-modeling-smoke-transport-in-the-sierra-nevada-mountains-using-bayesian-statistics" class="section level3">
+<h3>Evaluating Fire Emissions Inventories for Modeling Smoke Transport in the Sierra Nevada Mountains Using Bayesian Statistics</h3>
+<p><em>Samantha Faulstich</em></p>
 </div>
-<div id="tyler-ewing-and-richard-foote" class="section level3">
-<h3>Tyler Ewing and Richard Foote</h3>
-<p>Comparison of Existing scRNA-seq Imputation Methods</p>
+<div id="comparison-of-existing-scrna-seq-imputation-methods" class="section level3">
+<h3>Comparison of Existing scRNA-seq Imputation Methods</h3>
+<p><em>Tyler Ewing and Richard Foote</em></p>
 </div>
 </div>
 <div id="closing-3-2-1" class="section level2">
 <h2>Closing: 3-2-1</h2>
-<p>Please vote for your favorite projects!</p>
+<p>Non-project students: Please vote for your favorite projects using the Zoom poll after you have visited everyone to receive your 10 bonus points.</p>
 </div>
 
 
