--- a/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus-SP21.html
+++ b/syllabus/STAT446-646-Intro-to-Bayesian-Statistics-syllabus-SP21.html
@@ -340,8 +340,7 @@ border-top: 1px solid #cccccc;
 </nav>
 <div id="course-description" class="section level2">
 <h2>Course Description</h2>
-<p>This course introduces Bayesian statistics to a technical audience. Early on, we focus on the logic behind Bayesian statistics, including the mathematical formalization of updating beliefs under uncertainty. Then we describe Bayesian methods for well-known probability models and compare these methods to classical (frequentist) alternatives. Topics include Bayes’ Theorem, prior specification, Bayesian inference for discrete and continuous univariate random variables, and linear regression. We’ll implement methods analytically and using software such as Minitab, R, and Stan.</p>
-<p>The latter portions of the course focus on implementing more advanced Bayesian methods through modern computational techniques to sample posterior distributions including Markov Chain Monte Carlo (MCMC) and Hamiltonian Monte Carlo (HMC). The aim will be to provide the concepts and technical skills to conduct a realistic Bayesian data analysis.</p>
+<p>This course introduces Bayesian statistics to a technical audience. Early on, we focus on the logic behind Bayesian statistics, including the mathematical formalization of updating beliefs under uncertainty. Then we describe Bayesian methods for well-known probability models and compare these methods to classical (frequentist) alternatives. Topics include Bayes’ Theorem, prior specification, Bayesian inference for discrete and continuous univariate random variables, and linear regression. We’ll implement methods analytically and using software such as Minitab, <code>R</code>, and <code>Stan</code>.</p>
 <p><em>Instructor’s role</em></p>
 <ul>
 <li>Help explain and guide student understanding and skill development.</li>
@@ -376,7 +375,7 @@ border-top: 1px solid #cccccc;
 </ul>
 <p>In addition to the above 400-level outcomes, graduate students will be able to</p>
 <ul>
-<li>synthesize course concepts to apply Bayesian modeling techniques to real-world data.</li>
+<li>synthesize course concepts in an application of Bayesian modeling to real-world data.</li>
 </ul>
 </div>
 <div id="textbooks-course-materials" class="section level2">
@@ -387,14 +386,18 @@ border-top: 1px solid #cccccc;
 <p><em>Supplemental texts</em></p>
 <p>Modern best practices for coding and reporting <code>R</code> analyses:<br />
 <em>R for data science: import, tidy, transform, visualize, and model data</em>, Hadley WICKHAM and Garrett GROLEMUND. <a href="https://r4ds.had.co.nz/">Online textbook</a></p>
-<p>More Bayesian intuition and applied problems:<br />
-<em>Statistical Rethinking</em>, 2nd edition, Richard MCELREATH <a href="https://xcelab.net/rm/statistical-rethinking/">Textbook website</a></p>
+<p>Excellent Introduction to applied Bayesian modeling motivated by information theory: <em>Statistical Rethinking</em>, 2nd edition, Richard MCELREATH <a href="https://xcelab.net/rm/statistical-rethinking/">Textbook website</a></p>
 <p>Standard Bayesian reference textbook:<br />
 <em>Bayesian Data Analysis</em>, 3rd edition by Andrew GELMAN et al. <a href="http://www.stat.columbia.edu/~gelman/book/">Textbook website</a></p>
 <p><em>Mastering <code>R</code> and <code>RStudio</code></em></p>
 <p><a href="https://education.rstudio.com/learn/beginner/" class="uri">https://education.rstudio.com/learn/beginner/</a></p>
 <p><a href="https://education.rstudio.com/learn/intermediate/" class="uri">https://education.rstudio.com/learn/intermediate/</a></p>
 <p><a href="https://education.rstudio.com/learn/expert/" class="uri">https://education.rstudio.com/learn/expert/</a></p>
+</div>
+<div id="webcampuscanvas" class="section level2">
+<h2>WebCampus/Canvas</h2>
+<p>WebCampus/Canvas will be used for the majority of class business. Students are responsible for monitoring Announcements, Assignments/Due Dates, Course Files, and the Gradebook. The preferred mode of commuication for course-related discussion with the instructor is through Canvas messaging.</p>
+<p><a href="https://unr.instructure.com/login/canvas" class="uri">https://unr.instructure.com/login/canvas</a></p>
 </div>
 <div id="attendance" class="section level1">
 <h1>Attendance</h1>
@@ -421,19 +424,20 @@ border-top: 1px solid #cccccc;
 <div id="makeup-late-policy" class="section level2">
 <h2>Makeup, Late Policy</h2>
 <ul>
-<li>Problem sets solutions and completed exams are due on Fridays.</li>
+<li>Completed problem sets exams are due on Fridays.</li>
 <li>Late assignments/exams will be given a 20% penalty per business day received late. (i.e., Saturday -0%, Sunday -0%, Monday -20% , Tuesday -40%, …, Friday -100%).</li>
 <li>Exceptions will be made when a student misses work due to a documented (doctor’s note) illness or an extraordinary situation (up to the discretion of the instructor).</li>
 <li>There will be no early or make-up exams.</li>
-<li>If you need to miss an exam due to participation in a religious holiday or an official university activities (including athletics and other sanctioned activities), you must make arrangements with the instructor at least two weeks prior to the exam in question.</li>
+<li>If you need to miss an exam due to participation in a religious holiday or an official university activities (including athletics and other sanctioned activities), please make arrangements with the instructor at least two weeks prior to the exam in question.</li>
 </ul>
 <p><strong>I’ll drop (trim) your 2 lowest grades in the “Problem Set” category to protect against 1-2 outlying points having too much weight (e.g., a 0).</strong></p>
 </div>
 </div>
 <div id="grading" class="section level1">
 <h1>Grading</h1>
-<p>The course has a weighted grading scheme. There are three categories of assignments. Table 1 shows the percentages for each category and the number of assignments (n).</p>
+<p>The course has a weighted grading scheme. There are three categories of assignments for 446 students. Table 1 shows the percentages for each category and the number of assignments (n). Table 2 gives the similar table for 646 students with the addition of a “Project” category. Table 3 displays the percentage thresholds determining the final overall letter grade.</p>
 <table>
+<caption>Table 1. 446 grading scheme.</caption>
 <thead>
 <tr class="header">
 <th>Assignment</th>
@@ -459,8 +463,40 @@ border-top: 1px solid #cccccc;
 </tr>
 </tbody>
 </table>
-<p>Table 2 displays the letter grade conversion for the total score from Table 1.</p>
 <table>
+<caption>Table 2. 646 grading scheme.</caption>
+<thead>
+<tr class="header">
+<th>Assignment</th>
+<th>n</th>
+<th>%</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>Problem set</td>
+<td>14</td>
+<td>50</td>
+</tr>
+<tr class="even">
+<td>Midterm</td>
+<td>3</td>
+<td>15</td>
+</tr>
+<tr class="odd">
+<td>Final Exam</td>
+<td>1</td>
+<td>15</td>
+</tr>
+<tr class="even">
+<td>Project</td>
+<td>1</td>
+<td>20</td>
+</tr>
+</tbody>
+</table>
+<table>
+<caption>Table 3. Percentage range to letter grade conversion.</caption>
 <thead>
 <tr class="header">
 <th>Letter grade</th>
@@ -473,24 +509,44 @@ border-top: 1px solid #cccccc;
 <td>89.9 - up</td>
 </tr>
 <tr class="even">
+<td>A-</td>
+<td>87.9 - 89.8</td>
+</tr>
+<tr class="odd">
+<td>B+</td>
+<td>84.9 - 87.8</td>
+</tr>
+<tr class="even">
 <td>B</td>
-<td>79.9 - 89.8</td>
+<td>79.9 - 84.8</td>
+</tr>
+<tr class="odd">
+<td>B-</td>
+<td>77.9 - 79.8</td>
+</tr>
+<tr class="even">
+<td>C+</td>
+<td>74.9 - 77.8</td>
 </tr>
 <tr class="odd">
 <td>C</td>
-<td>69.9 - 79.8</td>
+<td>69.9 - 74.8</td>
 </tr>
 <tr class="even">
-<td>D</td>
-<td>59.9 - 69.8</td>
+<td>C-</td>
+<td>67.9 - 69.8</td>
 </tr>
 <tr class="odd">
+<td>D</td>
+<td>59.9 - 67.8</td>
+</tr>
+<tr class="even">
 <td>F</td>
 <td>below - 59.8</td>
 </tr>
 </tbody>
 </table>
-<p>The instructor reserves the right to deviate from the above thresholds, including assigning <span class="math inline">+</span> or <span class="math inline">−</span>.</p>
+<p><em>The instructor reserves the right to deviate from Table 3.</em></p>
 </div>
 <div id="additional-statements" class="section level1">
 <h1>Additional statements</h1>
@@ -504,7 +560,7 @@ border-top: 1px solid #cccccc;
 </div>
 <div id="academic-conduct" class="section level2">
 <h2>Academic Conduct</h2>
-<p>No laptops, cell phones, mp3 players, or other electronics are to be used for personal reasons in class. If you are being disruptive during class you will be asked to leave. Disruptions in this context include inadequate participation. You must come to class on time and stay until the end of lecture. Tardy students will not be admitted to class. Please visit <a href="http:www.unr.edu/student-conduct" class="uri">http:www.unr.edu/student-conduct</a> for our official student code of conduct.</p>
+<p>Please be professional. Prepare for and engage in class. Be on time and submit timely work. Please visit <a href="http:www.unr.edu/student-conduct" class="uri">http:www.unr.edu/student-conduct</a> for our official student code of conduct.</p>
 </div>
 <div id="academic-success-services" class="section level2">
 <h2>Academic Success Services</h2>
@@ -517,6 +573,36 @@ border-top: 1px solid #cccccc;
 <div id="academic-dishonesty" class="section level2">
 <h2>Academic Dishonesty</h2>
 <p>Cheating, plagiarism, or otherwise obtaining grades under false pretenses constitutes academic dishonesty according to the code of this university. Academic dishonesty will not be tolerated and penalties can include canceling a student’s enrollment without a grade or giving an F for the assignment or for the entire course. See the University Academic Standards policy: <a href="https://www.unr.edu/administrative-manual/6000-6999-curricula-teaching-research/instruction-research-procedures/6502-academic-standards">UAM 6,502</a>.</p>
+</div>
+<div id="statement-on-content-accessibility" class="section level2">
+<h2>Statement on content accessibility:</h2>
+<p>This course may leverage 3rd party web/multimedia content, if you experience any issues accessing this content, please notify your instructor.</p>
+</div>
+<div id="statement-on-covid-19-training-policies" class="section level2">
+<h2>Statement on COVID-19 Training Policies</h2>
+<p>Students must complete and follow all guidelines as stated in the Student COVID-19 Training modules, or any other trainings or directives provided by the University.</p>
+</div>
+<div id="statement-on-covid-19-face-coverings" class="section level2">
+<h2>Statement on COVID-19 Face Coverings:</h2>
+<p>In response to COVID-19, and in alignment with State of Nevada Governor Executive Orders, Roadmap to Recovery for Nevada plans, Nevada System of Higher Education directives, the University of Nevada President directives, and local, state, and national health official guidelines face coverings are required at all times while on campus, except when alone in a private office. This includes the classroom, laboratory, studio, creative space, or any type of in-person instructional activity, and public spaces.</p>
+<p>A “face covering” is defined as a “covering that fully covers a person’s nose and mouth, including without limitation, cloth face mask, surgical mask, towels, scarves, and bandanas” (State of Nevada Emergency Directive 024).</p>
+<p>Students that cannot wear a face covering due to a medical condition or disability, or who are unable to remove a mask without assistance may seek an accommodation through the Disability Resource Center.</p>
+</div>
+<div id="statement-on-covid-19-social-distancing" class="section level2">
+<h2>Statement on COVID-19 Social Distancing:</h2>
+<p>Face coverings are not a substitute for social distancing. Students shall observe current social distancing guidelines where possible in accordance with the Phase we are in while in the classroom, laboratory, studio, creative space (hereafter referred to as instructional space) setting and in public spaces. Students should avoid congregating around instructional space entrances before or after class sessions. If the instructional space has designated entrance and exit doors students are required to use them. Students should exit the instructional space immediately after the end of instruction to help ensure social distancing and allow for the persons attending the next scheduled class session to enter.</p>
+</div>
+<div id="statement-on-covid-19-disinfecting-your-learning-space" class="section level2">
+<h2>Statement on COVID-19 Disinfecting Your Learning Space:</h2>
+<p>Disinfecting supplies are provided for you to disinfect your learning space. You may also use your own disinfecting supplies.</p>
+</div>
+<div id="statement-on-covid-19-covid-19-like-symptoms-and-contact-with-someone-testing-positive-for-covid-19" class="section level2">
+<h2>Statement on COVID-19, COVID-19 Like Symptoms, and Contact with Someone Testing Positive for COVID-19:</h2>
+<p>Students must conduct daily health checks in accordance with CDC guidelines. Students testing positive for COVID 19, exhibiting COVID 19 symptoms or who have been in direct contact with someone testing positive for COVID 19 will not be allowed to attend in-person instructional activities and must leave the venue immediately. Students should contact the Student Health Center or their health care provider to receive care and who can provide the latest direction on quarantine and self-isolation. Contact your instructor immediately to make instructional and learning arrangements.</p>
+</div>
+<div id="statement-on-failure-to-comply-with-policy-including-as-outlined-in-this-syllabus-or-directives-of-a-university-employee" class="section level2">
+<h2>Statement on Failure to Comply with Policy (including as outlined in this Syllabus) or Directives of a University Employee</h2>
+<p>In accordance with section 6,502 of the University Administrative Manual, a student may receive academic and disciplinary sanctions for failure to comply with policy, including this syllabus, for failure to comply with the directions of a University Official, for disruptive behavior in the classroom, or any other prohibited action. “Disruptive behavior” is defined in part as behavior, including but not limited to failure to follow course, laboratory or safety rules, or endangering the health of others. A student may be dropped from class at any time for misconduct or disruptive behavior in the classroom upon recommendation of the instructor and with approval of the college dean. A student may also receive disciplinary sanctions through the Office of Student Conduct for misconduct or disruptive behavior, including endangering the health of others, in the classroom. The student shall not receive a refund for course fees or tuition.</p>
 </div>
 </div>
 <div id="tentative-course-schedule" class="section level1">
@@ -567,7 +653,7 @@ Week 04, 02/15 - 02/19: Ch. 6 Bayesian inference for discrete RVs
 <p><em>Monday topic</em>: President’s Day. No class.<br />
 <em>Wednesday topic</em>: Ch. 6 Bayesian inference for discrete RVs</p>
 <div class="week">
-Week 05, 02/22 - 02/26: Ch. 7-8 Continuous RVs and Bayesian inference for binomial proportion
+Week 05, 02/22 - 02/26: Ch. 7-8 Continuous RVs and Bayesian inference for binomial proportion <span class="math inline"><em>π</em></span>
 </div>
 <ul>
 <li>Readings: Bolstad Ch. 7-8.</li>
@@ -609,7 +695,7 @@ Week 08, 03/15 - 03/19: Ch. 11-12 Bayesian inference for normal mean <span class
 <li>Notes: None.</li>
 </ul>
 <p><em>Monday topic</em>: Ch. 11 Bayes inference for normal mean <span class="math inline"><em>μ</em></span><br />
-<em>Wednesday topic</em>: Ch. 12 Comparing Bayes/Frequentist inference for $</p>
+<em>Wednesday topic</em>: Ch. 12 Comparing Bayes/Frequentist inference for <span class="math inline"><em>μ</em></span></p>
 <div class="week">
 Week 09, 03/22 - 03/26: Ch. 13 Bayesian inference for difference between normal means
 </div>
@@ -683,7 +769,7 @@ Week 14, 04/26 - 04/30: Ch. 20 Introduction to Computational Bayes
 <li>Readings: Bolstad Ch. 20.</li>
 <li>Practice: None.</li>
 <li>Exams: Final exam due Friday 7 May 2021.</li>
-<li>Notes: Matrix (linear) algebra required.</li>
+<li>Notes: None.</li>
 </ul>
 <p><em>Monday topic</em>: Ch. 20 Computational Bayes including Markov Chain Monte Carlo (MCMC).<br />
 <em>Wednesday topic</em>: Prep Day. No class.</p>
